--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
+    implementation 'com.nex3z:flow-layout:1.2.4'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
