--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.SplashActivity" />
-        <activity android:name=".activity.LoginActivity">
-
-        </activity>
+        <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ProductDetailActivity">
-
-        </activity>
-
+        <activity android:name=".activity.ProductDetailActivity" />
 
         <meta-data
             android:name="com.facebook.accountkit.ApplicationName"
@@ -39,7 +34,6 @@
             android:value="@string/ACCOUNT_KIT_CLIENT_TOKEN" />
 
         <activity android:name="com.facebook.accountkit.ui.AccountKitActivity" />
-
         <activity android:name="com.facebook.accountkit.ui.AccountKitEmailRedirectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -50,6 +44,16 @@
                 <data android:scheme="@string/ak_login_protocol_schema" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.PersonalInfoActivity" />
+        <activity android:name=".activity.EditOrderDetailActivity" />
+        <activity android:name=".activity.ShippingAddressActivity" />
+        <activity android:name=".activity.NoteActivity" />
+        <activity android:name=".activity.PaymentActivity" />
+        <activity android:name=".activity.OrderSuccessActivity" />
+        <activity android:name=".activity.OrderHistoryActivity" />
+        <activity android:name=".activity.OrderHistoryDetailActivity" />
+        <activity android:name=".activity.AboutUsActivity" />
+        <activity android:name=".activity.ContactActivity"></activity>
     </application>
 
 </manifest>
