--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     implementation 'com.nex3z:flow-layout:1.2.4'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-
+    implementation 'android.arch.persistence.room:runtime:1.1.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.kaopiz:kprogresshud:1.1.0'
 
 }
