[GroupAssignment] call api to fill data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.shoesshop.groupassignment">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,17 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.SplashActivity"></activity>
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.HomeActivity">
+        <activity android:name=".activity.SplashActivity">
 
         </activity>
-        <activity android:name=".activity.ProductDetailActivity">
+        <activity android:name=".activity.LoginActivity">
+
+        </activity>
+        <activity android:name=".activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.ProductDetailActivity">
+
         </activity>
 
         <meta-data
