[Shoematics] fix conflict accountkit vs firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 
 android {
@@ -10,6 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath true
+            }
+        }
     }
     buildTypes {
         release {
@@ -28,6 +34,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation('com.facebook.android:account-kit-sdk:4.+') {
+        exclude group: 'com.google.android.gms', module: 'play-services-auth-api-phone'
+        exclude group: 'com.google.android.gms', module: 'play-services-auth'
+    }
+
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.ss.bannerslider:bannerslider:2.0.0'
     implementation 'com.facebook.android:account-kit-sdk:4.+'
@@ -41,8 +53,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.kaopiz:kprogresshud:1.1.0'
 
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-messaging:17.4.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.android.gms:play-services-gcm:11.4.0'
+    implementation 'com.google.android.gms:play-services-auth:11.4.0'
+
+
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 }
 apply plugin: 'com.google.gms.google-services'
